--- a/workflow-ui-module/webapp/i18n/i18n.properties
+++ b/workflow-ui-module/webapp/i18n/i18n.properties
@@ -7,5 +7,9 @@ appTitle=Task UI app title
 
 #YDES: Application description
 appDescription=A workflow task UI application
+
 #XTIT: Main view title
 title=Task UI app title
+
+#XTIT: FLP title for intent-intent
+intent-intent.flpTitle=Customer Workflow Task
